[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Main.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Level1Code.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Block.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Pointer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Level1.gd" type="Script" id=6]
[ext_resource path="res://Assets/fonts/SourceCodePro-Black.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/fonts/SourceCodePro-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Connection.webm" type="VideoStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 8 )

[node name="Level1" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="MarginContainer" parent="CanvasLayer/HSplitContainer" index="1"]
mouse_filter = 2

[node name="ViewportContainer" parent="CanvasLayer/HSplitContainer/MarginContainer" index="0"]
mouse_filter = 2

[node name="Level1Code" parent="CanvasLayer/HSplitContainer/MarginContainer/ViewportContainer/Viewport" index="0" instance=ExtResource( 2 )]
mouse_filter = 2

[node name="StartButton" parent="CanvasLayer" index="1"]
margin_left = 844.0
margin_right = 1084.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer" index="2"]
margin_right = 1920.0
margin_bottom = 1079.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer" index="0"]
margin_left = 560.0
margin_top = 139.0
margin_right = 1360.0
margin_bottom = 939.0
rect_min_size = Vector2( 800, 800 )

[node name="Panel" type="Panel" parent="CanvasLayer/CenterContainer/VBoxContainer" index="0"]
margin_right = 800.0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/CenterContainer/VBoxContainer/Panel" index="0"]
margin_right = 800.0
margin_bottom = 800.0
rect_min_size = Vector2( 800, 800 )
color = Color( 0, 0, 0, 0.254902 )

[node name="Heading" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer" index="1"]
margin_top = 4.0
margin_right = 800.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )
text = "Introduction"
align = 1

[node name="Heading2" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer" index="2"]
margin_top = 61.0
margin_right = 800.0
margin_bottom = 233.0
custom_fonts/font = SubResource( 2 )
text = "    Nodes can have inputs and outputs; an arrow pointing outwards from a node signals an available outgoing connection. Connect it to another node by dragging the line to an incoming arrow
	"
autowrap = true

[node name="VideoPlayer" type="VideoPlayer" parent="CanvasLayer/CenterContainer/VBoxContainer" index="3"]
margin_top = 237.0
margin_right = 800.0
margin_bottom = 637.0
rect_min_size = Vector2( 0, 400 )
stream = ExtResource( 9 )
autoplay = true

[node name="Heading3" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer" index="4"]
margin_top = 641.0
margin_right = 800.0
margin_bottom = 743.0
custom_fonts/font = SubResource( 2 )
text = "
   Try setting the position node to a position that centers it on the white outline"
autowrap = true

[node name="Pointer" parent="." index="10" instance=ExtResource( 5 )]
position = Vector2( 240, 0 )

[node name="Label" type="Label" parent="." index="11"]
margin_left = 128.0
margin_top = -87.0
margin_right = 368.0
margin_bottom = 10.0
text = "The red block needs to travel here!"

[node name="Block" parent="." index="12" instance=ExtResource( 3 )]

[connection signal="finished" from="CanvasLayer/CenterContainer/VBoxContainer/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
